fix name in plot_power_ct for multiple wind turbines

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ test_PyWake:  # name the job what we like
     test
   script:
   - pip install --upgrade pip
-  - pip install -e .[test] #--timeout 3600 --default-timeout=3600, fails anyway if Tensorflow does not install in <10min
+  - pip install -e .[test] --timeout 100 #, fails anyway if Tensorflow does not install in <10min
   - pytest
   tags:  # only runners with this tag can do the job [3]
   - ci-ubuntu
