--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -179,6 +179,7 @@ build_conda:
     paths: ["conda_channel/noarch/py_wake*.tar.bz2"]
   rules:
     - if: $CI_COMMIT_TAG && $CI_COMMIT_REF_PROTECTED
+      allow_failure: true
     - if:  $CI_PIPELINE_SOURCE == "merge_request_event"
       when: manual
       allow_failure: true
